@@ -20,6 +20,7 @@ MBDyn 1.X-Devel
 	Bug fixes:
 		- fix structural nodes accel output (Reinhard Resch)
 		- fix variable mass body (noted by Francesco Castellini)
+		- fix 'use binary' in modal joint
 
 MBDyn 1.4.1
 	Enhancements:
